{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 46,
  "lineage": "539076c6-1a8b-95e0-fb14-9fa8db2eb378",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009dbeb08f8a96a38",
            "association_id": "eipassoc-0e1fe2dc3b984767c",
            "domain": "vpc",
            "id": "eipalloc-009dbeb08f8a96a38",
            "instance": "i-06b63f315bd91e818",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dd8f087b67c6880c",
            "private_dns": "ip-10-0-50-116.ec2.internal",
            "private_ip": "10.0.50.116",
            "public_dns": "ec2-34-196-57-32.compute-1.amazonaws.com",
            "public_ip": "34.196.57.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.test-ec2-instance",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:588661051303:instance/i-06b63f315bd91e818",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b63f315bd91e818",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bigdata",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dd8f087b67c6880c",
            "private_dns": "ip-10-0-50-116.ec2.internal",
            "private_ip": "10.0.50.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-054928e34ff6b8a67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0201e6dbbb03e15a1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04301bbcca61d5df1",
            "tags": {
              "Name": "bigdatata"
            },
            "tags_all": {
              "Name": "bigdatata"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0201e6dbbb03e15a1"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588661051303:internet-gateway/igw-0c9db019158c87124",
            "id": "igw-0c9db019158c87124",
            "owner_id": "588661051303",
            "tags": {
              "Name": "test-env-gw"
            },
            "tags_all": {
              "Name": "test-env-gw"
            },
            "vpc_id": "vpc-05514ed01544a799b"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588661051303:route-table/rtb-038c1a34b976d5f80",
            "id": "rtb-038c1a34b976d5f80",
            "owner_id": "588661051303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9db019158c87124",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table"
            },
            "tags_all": {
              "Name": "test-env-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05514ed01544a799b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056207a7154120e7d",
            "route_table_id": "rtb-038c1a34b976d5f80",
            "subnet_id": "subnet-04301bbcca61d5df1"
          },
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588661051303:security-group/sg-0201e6dbbb03e15a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0201e6dbbb03e15a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "588661051303",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05514ed01544a799b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588661051303:subnet/subnet-04301bbcca61d5df1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04301bbcca61d5df1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588661051303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05514ed01544a799b"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588661051303:vpc/vpc-05514ed01544a799b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db959b9857d7026d",
            "default_route_table_id": "rtb-0eadb910e1f5a6e02",
            "default_security_group_id": "sg-043e65229c3651621",
            "dhcp_options_id": "dopt-06af9c89bf478d8f0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05514ed01544a799b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eadb910e1f5a6e02",
            "owner_id": "588661051303",
            "tags": {
              "Name": "test-env"
            },
            "tags_all": {
              "Name": "test-env"
            }
          }
        }
      ]
    }
  ]
}